Fixed Github button on mobile

--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -65,7 +65,7 @@
   color: white;
 
   height: 4vh;
-  width: 40%;
+  width: 45%;
   border-radius: 10px;
 
   padding: 0 10px 0 10px;
